@@ -1,12 +1,7 @@
-### Snake Game
+# Snake Game
 
 I have created this basic game using JavaFX
 
-To run the game:
+### To run the game:
 
-1. Download the jar/snake.jar
-2. run below command
-
-    java --module-path path/to/javafx/lib --add-modules javafx.controls,javafx.fxml -jar .\snake.jar
-
-note: javafx is needed to run the game
+download the Snake.exe and install it
